--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@slack/bolt": "^1.6.0"
+    "@slack/bolt": "^2.5.0",
+    "dotenv": "^8.2.0"
   },
   "engines": {
     "node": "11.x"
